[gd_scene load_steps=4 format=2]

[ext_resource path="res://asset/background.png" type="Texture" id=1]
[ext_resource path="res://asset/theme/new_theme.tres" type="Theme" id=2]
[ext_resource path="res://menu/Menu.gd" type="Script" id=3]

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 360, 640 )
rotation = 1.5708
scale = Vector2( 0.668, 0.668 )
texture = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 360, 640 )

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -152.0
margin_right = 116.0
margin_bottom = 152.0
theme = ExtResource( 2 )
alignment = 1

[node name="StartButton" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 19.0
margin_right = 232.0
margin_bottom = 74.0
size_flags_horizontal = 5
theme = ExtResource( 2 )
text = "Start"

[node name="AboutButton" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 124.0
margin_right = 232.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 100, 35 )
size_flags_horizontal = 5
theme = ExtResource( 2 )
text = "About"

[node name="ExitButton" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 229.0
margin_right = 232.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 100, 35 )
size_flags_horizontal = 5
theme = ExtResource( 2 )
text = "Exit"

[connection signal="button_up" from="Node2D/VBoxContainer/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="Node2D/VBoxContainer/AboutButton" to="." method="_on_AboutButton_button_up"]
[connection signal="button_up" from="Node2D/VBoxContainer/ExitButton" to="." method="_on_ExitButton_button_up"]
